# FORECAST

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/src/: data.txt  main.cpp  run.sh
lib/: CMakeLists.txt
lib/include/: date.hpp  forecast.hpp  parts_of_day.hpp  weather.hpp  weather_day.hpp  weather_lib.hpp
lib/src/: date.cpp  forecast.cpp  parts_of_day.cpp  weather.cpp  weather_day.cpp
scripts/: install.sh  run.sh  run_gdb.sh  run_valgrind.sh  runtests.sh  runtests_gdb.sh  runtests_valgrind.sh
tests/: CMakeLists.txt  genhtml.sh  run.sh  tests.cpp
tests/src/: main.cpp
